# WhatAnime2

./: .gitignore  todo.md
backend/: Cargo.toml
backend/anilist_api/: Cargo.toml
backend/anilist_api/src/: lib.rs  models.rs
backend/anisong_api/: Cargo.toml
backend/anisong_api/src/: anisong_api.rs  lib.rs  models.rs  testParse1.json  testParse1.txt  testParse2.txt
backend/database_api/: Cargo.toml
backend/database_api/migrations/: 20250328220113_init.sql  20250328231408_no_song_category.sql  20250330112912_reports_users.sql  inital.sql
backend/database_api/src/: anisongview.sql  lib.rs  models.rs  regex.rs
backend/spotify_api/: Cargo.toml
backend/spotify_api/src/: lib.rs  models.rs
backend/src/: error.rs  main.rs
backend/src/anisong/: mod.rs  models.rs  testParse3.txt
backend/src/database/: mod.rs
backend/src/what_anime/: mod.rs  models.rs  routes.rs  utility.rs
backend/what_anime_shared/: Cargo.toml
backend/what_anime_shared/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnimeEntry.css  AnimeEntry.tsx  AnimeList.css  AnimeList.tsx  OptionsOverlay.css  OptionsOverlay.tsx  SongInfo.css  SongInfo.tsx  index.css  main.tsx  mycss.css  report_window.css  report_window.tsx  update.tsx
moderating/: Cargo.toml
moderating/src/: fetch_anisong.rs  load_links.rs  main.rs  parse_reports.rs
scripts/anisong_scrape/: Cargo.toml
scripts/anisong_scrape/src/: main.rs
scripts/fix_media_info/: Cargo.toml
scripts/fix_media_info/src/: main.rs
scripts/load_links/: Cargo.toml
scripts/load_links/src/: main.rs
