[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "derive",
] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net"] }
