[package]
name = "database_api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.3", features = ["runtime-tokio"] }
anisong_api = { path = "../anisong_api" }
anilist_api = { path = "../anilist_api" }
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["macros"] }
dotenvy = "0.15.7"
